--- a/WeatherAppTest3/app/src/main/AndroidManifest.xml
+++ b/WeatherAppTest3/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
             android:exported="true"/>
         <activity android:name=".MainActivity"
             android:launchMode="singleTop">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,7 +27,10 @@
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
-
         </activity>
+
+        <activity
+            android:name=".detailedforecast.DetailedForecastActivity"/>
+
     </application>
 </manifest>
